# fbi_crime

./: .gitignore  README  pyproject.toml  settings.toml
fbi_crime/: data.py  print_variables.py  read_layout.py
layouts/: 2021-layout.yaml
notebooks/: jewish.ipynb
tests/: test_layout.py
